Archive2/d5/88ff37cc4a2eff/output
main.cpp:111:1: error: stray '\342' in program
 ​
 ^
main.cpp:111:1: error: stray '\200' in program
main.cpp:111:1: error: stray '\213' in program
main.cpp: In function 'int main()':
main.cpp:18:27: error: expected ')' before '!' token
 if (scanf("%lf", &radius) ! = 1)
                           ^
main.cpp:33:27: error: expected ')' before '!' token
 if (scanf("%lf", &radius) ! = 1)
                           ^
main.cpp:48:1: error: expected ';' before 'if'
 if (scanf("lf%", &base) !=1 || scanf("%lf", height) !=1);
 ^
main.cpp:51:1: error: expected ';' before 'return'
 return 0;
 ^
main.cpp:52:19: error: 'height' was not declared in this scope
 if (base < 0.5 || height < 0.5)
                   ^
main.cpp:53:62: error: 'print' was not declared in this scope
 {print("the inputs cannot be negative numberer less than 0.5");
                                                              ^
main.cpp:54:1: error: return-statement with no value, in function returning 'int' [-fpermissive]
 return; 
 ^
main.cpp:56:17: error: 'height' was not declared in this scope
 area = ( base * height )/2 
                 ^
main.cpp:61:1: error: expected ';' before 'if'
 if (scanf("lf%", &base) !=1 || scanf("%lf", height) !=1);
 ^
main.cpp:64:1: error: expected ';' before 'return'
 return 0;
 ^
main.cpp:66:62: error: 'print' was not declared in this scope
 {print("the inputs cannot be negative numberer less than 0.5");
                                                              ^
main.cpp:67:1: error: return-statement with no value, in function returning 'int' [-fpermissive]
 return; 
 ^
main.cpp:73:37: error: expected ')' before ';' token
 printf("Enter the value for side \n";
                                     ^
main.cpp:74:30: error: 'getting' was not declared in this scope
 if (scanf("%lf", &side) !=1) getting user input and cheek if side is number 
                              ^
main.cpp:77:1: error: return-statement with no value, in function returning 'int' [-fpermissive]
 return; 
 ^
main.cpp:79:20: error: 'apothem' was not declared in this scope
 area = (side * 5 * apothem/2);
                    ^
main.cpp:84:37: error: expected ')' before ';' token
 printf("Enter the value for side \n";
                                     ^
main.cpp:85:30: error: 'getting' was not declared in this scope
 if (scanf("%lf", &side) !=1) getting user input and cheek if side is number 
                              ^
main.cpp:88:1: error: return-statement with no value, in function returning 'int' [-fpermissive]
 return; 
 ^
main.cpp:90:20: error: 'apothem' was not declared in this scope
 area = (side * 5 * apothem/2);
                    ^
main.cpp:94:9: error: expected ':' before ';' token
 case 'e';
         ^
main.cpp:96:9: error: expected ':' before ';' token
 case 'E';
         ^
main.cpp:98:8: error: expected ':' before ';' token
 default;
        ^
main.cpp:7:20: warning: unused variable 'width' [-Wunused-variable]
 double area, base, width, radius, apathem, side, length;
                    ^
main.cpp:7:35: warning: unused variable 'apathem' [-Wunused-variable]
 double area, base, width, radius, apathem, side, length;
                                   ^
main.cpp:7:50: warning: unused variable 'length' [-Wunused-variable]
 double area, base, width, radius, apathem, side, length;
                                                  ^
main.cpp: At global scope:
main.cpp:104:1: error: expected unqualified-id before 'return'
 return 0;
 ^
main.cpp:106:1: error: expected declaration before '}' token
 }
 ^
